concept of external css and class selectors

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> CODING START</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 
 <body>
     <center>
         <h1> Ram is a good coder</h1>
     </center>
-    <h2>Ram is a good coder</h2>
+    <h2 style="color: blue ;">Ram is a good coder</h2>
     <h3> Ram is a good coder</h3>
     <h4>Ram is a good coder</h4>
     <h5>Ram is a good coder </h5>
@@ -41,6 +43,10 @@
         <li> centre , marquee</li>
         <li>abbr , hr ,br </li>
     </ol>
+    <div class="container">
+        <p>my name is xyz</p>
+        <!-- <p>my name is abc. i study BCA</p> -->
+    </div>
 </body>
 
 </html>
