learn about id selector child and parent elements and color codes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
         <p>my name is xyz</p>
         <!-- <p>my name is abc. i study BCA</p> -->
     </div>
+
+    <!-- use of id selector -->
+    <div id="college">
+        <img src="shri krishn.jpeg" alt="loading">
+        <img src="shri krishn.jpeg" alt="loading">
+        <img src="shri krishn.jpeg" alt="loading">
+        <img src="shri krishn.jpeg" alt="loading">
+        <img src="shri krishn.jpeg" alt="loading">
+        <img src="shri krishn.jpeg" alt="loading">
+    </div>
+
+
 </body>
 
 </html>
